Fix travis build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ jobs:
       - docker push fuzzle/lnd
     - stage: build lnd-ext docker image
       before_script: cd lnd-ext
+      script:
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       - ./docker-build-command.sh
       - docker push fuzzle/lnd-ext
