Finalize docker compose yml file.

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,5 @@ RPCALLOWIP=172.19.1.0/24
 
 # lnd container envs
 LND_IPV4=172.19.1.20
-
+EXTERNAL_IP=lightning.example.com
+ALIAS=lightning.example.com
