--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,21 @@ services:
     - DEBUGLEVEL=info
     - EXTERNALIP=${EXTERNAL_IP:-lightning.example.com}
 
+  zap-desktop:
+    container_name: zap-desktop
+    image: fuzzle/zap-desktop:latest
+    networks:
+      btc_lightning_net:
+        ipv4_address: ${LND_IPV4:-172.19.1.130}
+    volumes:
+    - '/tmp/.X11-unix:/tmp/.X11-unix'
+#      - 'zap-data:'
+    entrypoint: ['/bin/bash']
+    stdin_open: true
+    tty: true
+    #command: npm run dev
+
+
 networks:
   btc_lightning_net:
     driver: bridge
@@ -47,3 +62,4 @@ networks:
 volumes:
   bitcoin-data:
   lnd-data:
+  zap-data:
