Lnd gui rest (#4)
Moved to separate projects

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,18 @@ BITCOIND_IPV4=172.19.1.10
 RPCUSER=foo
 RPCPASSWORD=bar
 RPCALLOWIP=172.19.1.0/24
+BITCOIND_DATA_PATH=/path/to/bitcoind/data
 
 # lnd container envs
 LND_IPV4=172.19.1.20
 EXTERNAL_IP=lightning.example.com
 ALIAS=lightning.example.com
+LND_DATA_PATH=/path/to/lnd/data
+
+# lnd GUI container envs
+LNDGUI_IPV4=172.19.1.30
+
+# lnd REST container envs
+LNDREST_IPV4=172.19.1.40
+LNDREST_LND_HOST=lightning.example.com
+LNDREST_LND_PORT=10009
