--- a/lnd-ext/Dockerfile
+++ b/lnd-ext/Dockerfile
@@ -1,8 +1,11 @@
-FROM fuzzle/lnd:latest
+FROM lightninglabs/lnd:latest
 
 MAINTAINER Andreas Lingenhag <11538311+alingenhag@users.noreply.github.com>
 
-WORKDIR $GOPATH/src/github.com/lightningnetwork/lnd
+RUN apk update && \
+    apk add --no-cache openssl \
+ && rm -rf /var/cache/apk/*
+
+WORKDIR /
 ADD start-lnd-ext.sh .
-#RUN chmod +x start-lnd-ext.sh
-ENTRYPOINT ["/go/src/github.com/lightningnetwork/lnd/start-lnd-ext.sh"]
+ENTRYPOINT ["/start-lnd-ext.sh"]
