Readd docker image creating of lnd.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ dist: trusty
 
 jobs:
   include:
+    - stage: build lnd docker image
+      before_script: cd lnd
+      script:
+      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+      - ./travis-build-command.sh
+      - docker push fuzzle/lnd
     - stage: build lnd-ext docker image
       before_script: cd lnd-ext
       script:
