--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
     - EXTERNALIP=${EXTERNAL_IP:-lightning.example.com}
     - RESTLISTEN=0.0.0.0:8080
     - RPCLISTEN=0.0.0.0:10009
+    - TLSEXTRADOMAIN=lnd
     #- AUTOPILOT_ACTIVE=n
     #- AUTOPILOT_ALLOCATION=0.9
     #- AUTOPILOT_MINCHANSIZE=10
