--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,12 @@
-sudo: true
-dist: trusty
+language: minimal
 
-jobs:
-  include:
-    - stage: build lnd docker image
-      before_script: cd lnd
-      script:
-      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-      - ./travis-build-command.sh
-      - docker push fuzzle/lnd
-    - stage: build lnd-ext docker image
-      before_script: cd lnd-ext
-      script:
-      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-      - ./docker-build-command.sh
-      - docker push fuzzle/lnd-ext
+services:
+  - docker
+
+script:
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - ./lnd/travis-build-command.sh
+  - ./lnd-ext/docker-build-command.sh
+  - docker push tylevine/lnd
+  - docker push tylevine/lnd-ext
+
