--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
 - docker build -t lnd:latest .
 deploy:
   provider: script
-  script: ./deploy.sh
+  script: bash ./deploy.sh
   on:
     branch: master
 env:
